--- a/front/package.json
+++ b/front/package.json
@@ -16,7 +16,6 @@
     "qs": "^6.10.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.4.0",
-    "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "vuex-along": "^1.2.13"
   },
@@ -25,7 +24,14 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "vue-template-compiler": "^2.6.11"
+    "babel-plugin-component": "^1.1.1",
+    "compression-webpack-plugin": "^1.1.12",
+    "image-webpack-loader": "^8.1.0",
+    "lodash-webpack-plugin": "^0.11.6",
+    "mini-css-extract-plugin": "^2.6.0",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.0.0",
+    "webpack-bundle-analyzer": "^4.5.0"
   },
   "browserslist": [
     "> 1%",
