--- a/web/jblog/pom.xml
+++ b/web/jblog/pom.xml
@@ -11,7 +11,27 @@
     <artifactId>jblog</artifactId>
     <version>1.0.0</version>
     <dependencies>
-
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+        </dependency>
+        <!--  Aspect 依赖莫名报错  -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
         <!-- FastDFS 依赖 -->
         <dependency>
             <groupId>net.oschina.zcx7878</groupId>
@@ -90,8 +110,6 @@
     </dependencies>
     <build>
         <plugins>
-
-
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
