--- a/web/pom.xml
+++ b/web/pom.xml
@@ -24,15 +24,43 @@
         <mysql.version>5.1.47</mysql.version>
         <druid.version>1.1.16</druid.version>
         <mybatis.spring.boot.version>2.2.0</mybatis.spring.boot.version>
+        <knife4j.version>2.0.4</knife4j.version>
+        <satoken.version>1.29.0</satoken.version>
+        <logstash.version>5.3</logstash.version>
+        <hutool.version>5.4.0</hutool.version>
+        <fastdfs.version>1.27.0.0</fastdfs.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-spring-boot-starter</artifactId>
+                <version>${knife4j.version}</version>
+            </dependency>
+            <!--  Sa-token 依赖      -->
+            <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-spring-boot-starter</artifactId>
+                <version>${satoken.version}</version>
+            </dependency>
+            <!-- 日志收集 依赖       -->
+            <dependency>
+                <groupId>net.logstash.logback</groupId>
+                <artifactId>logstash-logback-encoder</artifactId>
+                <version>${logstash.version}</version>
+            </dependency>
+            <!--  hutool工具类 -->
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
             <!-- FastDFS 依赖 -->
             <dependency>
                 <groupId>net.oschina.zcx7878</groupId>
                 <artifactId>fastdfs-client-java</artifactId>
-                <version>1.27.0.0</version>
+                <version>${fastdfs.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.velocity</groupId>
@@ -92,7 +120,7 @@
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>1.18.22</version>
+                <version>${lombok.version}</version>
                 <optional>true</optional>
             </dependency>
         </dependencies>
@@ -106,7 +134,6 @@
                     <fork>true</fork>
                     <addResources>true</addResources>
                 </configuration>
-
             </plugin>
         </plugins>
     </build>
