--- a/web/pom.xml
+++ b/web/pom.xml
@@ -10,7 +10,9 @@
     <version>1.0-SNAPSHOT</version>
 
     <modules>
-        <module>jblog</module>
+        <module>jblog-core</module>
+        <module>jblog-common</module>
+
     </modules>
 
     <!-- 统一管理jar包版本 -->
@@ -22,17 +24,24 @@
         <log4j.version>1.2.17</log4j.version>
         <lombok.version>1.16.18</lombok.version>
         <mysql.version>5.1.47</mysql.version>
-        <druid.version>1.1.16</druid.version>
+        <druid.version>1.1.23</druid.version>
         <mybatis.spring.boot.version>2.2.0</mybatis.spring.boot.version>
         <knife4j.version>2.0.4</knife4j.version>
         <satoken.version>1.29.0</satoken.version>
         <logstash.version>5.3</logstash.version>
         <hutool.version>5.4.0</hutool.version>
         <fastdfs.version>1.27.0.0</fastdfs.version>
+        <jblog-common.version>1.0-SNAPSHOT</jblog-common.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <!-- jblog 通用模块 -->
+            <dependency>
+                <groupId>com.jj</groupId>
+                <artifactId>jblog-common</artifactId>
+                <version>${jblog-common.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.github.xiaoymin</groupId>
                 <artifactId>knife4j-spring-boot-starter</artifactId>
@@ -95,8 +104,8 @@
             <!-- druid 依赖 -->
             <dependency>
                 <groupId>com.alibaba</groupId>
-                <artifactId>druid</artifactId>
-                <version>1.1.21</version>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>${druid.version}</version>
             </dependency>
             <!-- mybatis 依赖 -->
             <dependency>
@@ -125,16 +134,4 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <fork>true</fork>
-                    <addResources>true</addResources>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
